# project-euler

./: .gitignore  README.md
0001-multiples_of_3_or_5/fortran/: CMakeLists.txt  README.md  fpm.toml  gauss.f90  multiples.f90
0001-multiples_of_3_or_5/fortran/app/: main.f90
0001-multiples_of_3_or_5/fortran/src/: multiples.f90
0001-multiples_of_3_or_5/pascal/: README.md  multiples.lpi  multiples.lpr
0002-even_fibonacci_numbers/fortran/: CMakeLists.txt  README.md  evenfibo.f90  fpm.toml
0002-even_fibonacci_numbers/pascal/: README.md  evenfibo.lpi  evenfibo.lpr
0003-largest_prime_factor/fortran/: CMakeLists.txt  README.md  fpm.toml  largestprimefactor.f90
0003-largest_prime_factor/pascal/: README.md  largestprimefactor.lpi  largestprimefactor.lpr
0003_largest_prime_factor/fortran/: README.md
0004-largest_palindrome_product/fortran/: CMakeLists.txt  README.md  fpm.toml  largest_palindrome_product.f90
0004-largest_palindrome_product/fortran/app/: main.f90
0004-largest_palindrome_product/fortran/src/: palindrome_mod.f90
0004-largest_palindrome_product/pascal/: README.md  largestpalindromeproduct.lpi  largestpalindromeproduct.lpr
0005-smallest_multiple/fortran/: CMakeLists.txt  README.md  fpm.toml  smallest_multiple.f90
0006-sum_square_difference/fortran/: CMakeLists.txt  README.md  fpm.toml  sum_square_difference.f90
0007-10001st_prime/fortran/: CMakeLists.txt  README.md  fpm.toml  nth_prime.f90
0008-largest_product_in_a_series/fortran/: CMakeLists.txt  README.md  fpm.toml  largest_product_in_a_series.f90
0009-special_pythagorean_triplet/fortran/: CMakeLists.txt  README.md  fpm.toml  special_pythagorean_triplet.f90
0010-summation_of_primes/fortran/: CMakeLists.txt  README.md  fpm.toml  summation_of_primes.f90
0010-summation_of_primes/fortran/app/: main.f90
0010-summation_of_primes/fortran/src/: primes1_mod.f90
0011-largest_product_in_a_grid/fortran/: CMakeLists.txt  README.md  fpm.toml  largest_product_in_a_grid.f90
0012-highly_divisible_triangular_number/fortran/: CMakeLists.txt  README.md  (+2 more)
0018-maximum_problem_sum_i/: README.md
(+47 files in other folders)
